examples/test/testpolicy17817.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17817
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key20: value19
      key10: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value43
          key13: value13
          key5: value43
      podSelector:
        matchLabels:
          key33: value35
          key4: value40
          key38: value24
